--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>de.unirostock.sems</groupId>
     <artifactId>BiVeS-WS</artifactId>
     <packaging>war</packaging>
-    <version>1.1</version>
+    <version>1.2</version>
     <name>BiVeS-WS</name>
     <url>http://sems.uni-rostock.de/projects/bives/</url>
     <developers>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>de.unirostock.sems</groupId>
             <artifactId>BiVeS</artifactId>
-            <version>1.1.3-SNAPSHOT</version>
+            <version>1.2.3</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
@@ -30,8 +30,8 @@
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
         </dependency>
     </dependencies>
     <distributionManagement>
