--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,11 +15,11 @@
 
     <servlet-mapping>
         <servlet-name>Query</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
   
   
   <welcome-file-list>
-        <welcome-file>query</welcome-file>
+        <welcome-file>Query</welcome-file>
   </welcome-file-list>
 </web-app>
