--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>de.unirostock.sems</groupId>
     <artifactId>BiVeS-WS</artifactId>
     <packaging>war</packaging>
-    <version>1.5.2</version>
+    <version>1.6</version>
     <name>BiVeS-WS</name>
     <url>http://sems.uni-rostock.de/projects/bives/</url>
     <developers>
@@ -20,12 +20,12 @@
         <dependency>
             <groupId>de.unirostock.sems</groupId>
             <artifactId>BiVeS</artifactId>
-            <version>1.7.1</version>
+            <version>1.9</version>
         </dependency>
         <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
+            <groupId>de.binfalse</groupId>
+            <artifactId>BFLog</artifactId>
+            <version>1.3.3</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -57,8 +57,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
