--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>de.unirostock.sems</groupId>
     <artifactId>BiVeS-WS</artifactId>
     <packaging>war</packaging>
-    <version>1.6.2</version>
+    <version>1.6.3</version>
     <name>BiVeS-WS</name>
     <url>http://sems.uni-rostock.de/projects/bives/</url>
     <developers>
@@ -62,6 +62,13 @@
                 </configuration>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
     <profiles>
         <!-- deployment profile -->
