--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.unirostock.sems</groupId>
-    <artifactId>BiVeS-WS</artifactId>
+    <artifactId>BiVeS-WebApp</artifactId>
     <packaging>war</packaging>
     <version>1.6.3</version>
-    <name>BiVeS-WS</name>
+    <name>BiVeS-WebApp</name>
     <url>http://sems.uni-rostock.de/projects/bives/</url>
     <developers>
         <developer>
