need to add our mvn repo for the auto-docker-build

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,26 @@
             <version>3.1.0</version>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>sems-maven-repository-releases</id>
+            <name>SEMS Maven Repo</name>
+            <url>http://mvn.sems.uni-rostock.de/releases/</url>
+            <layout>default</layout>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>sems-maven-repository-snapshots</id>
+            <name>SEMS Maven Repo</name>
+            <url>http://mvn.sems.uni-rostock.de/snapshots/</url>
+            <layout>default</layout>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+    </repositories>
     <distributionManagement>
         <downloadUrl>http://mvn.sems.uni-rostock.de</downloadUrl>   
         <snapshotRepository>
