--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>de.uni-rostock.sbi</groupId>
     <artifactId>BiVeS-WebApp</artifactId>
     <packaging>war</packaging>
-    <version>1.9.1</version>
+    <version>1.9.2</version>
     <name>BiVeS-WebApp</name>
     <url>http://sems.uni-rostock.de/projects/bives/</url>
     <properties>
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>de.uni-rostock.sbi</groupId>
             <artifactId>BiVeS</artifactId>
-            <version>1.12.0</version>
+            <version>[1.12.1,)</version>
         </dependency>
         <dependency>
             <groupId>de.binfalse</groupId>
